# PULSE-Stadium-AI

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  .mcp.json.example  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Idea.md  LICENSE  README.md  REFERENCES.md  SECURITY.md  deployments.md  overview.md  package.json  turbo.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
apps/counterfactual/: .gcloudignore  Dockerfile  pyproject.toml
apps/counterfactual/src/: __init__.py  abs_engine.py  main.py
apps/counterfactual/src/tests/: test_abs_engine.py
apps/fan-pwa/: .dockerignore  .gcloudignore  Dockerfile  package.json  tailwind.config.ts  vitest.config.ts
apps/fan-pwa/src/__tests__/: MatchScreen.test.tsx  Onboarding.test.tsx  TabBar.test.tsx  setup.ts
apps/fan-pwa/src/app/: globals.css  layout.tsx  manifest.ts  page.tsx
apps/fan-pwa/src/app/api/concierge/: route.ts
apps/fan-pwa/src/app/api/match/: route.ts
apps/fan-pwa/src/app/api/queues/: route.ts
apps/fan-pwa/src/components/: ConciergeScreen.tsx  MatchScreen.tsx  NudgesScreen.tsx  Onboarding.tsx  QueuesScreen.tsx  TabBar.tsx  WayfindScreen.tsx
apps/fan-pwa/src/lib/: cloud-run.ts  speech.ts  types.ts
apps/frontend/: Dockerfile  next.config.js  package.json  tailwind.config.ts
apps/frontend/public/scripted-responses/: ipl-final-2026.json
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/app/api/cf/start/: route.ts
apps/frontend/src/app/api/cf/stop/: route.ts
apps/frontend/src/app/api/orchestrator/: route.ts
apps/frontend/src/app/api/scenario/start/: route.ts
apps/frontend/src/app/api/scripted/fire/: route.ts
apps/frontend/src/app/api/sim/reset/: route.ts
apps/frontend/src/app/api/state/: route.ts
apps/frontend/src/app/api/traces/: route.ts
apps/frontend/src/app/ops/: page.tsx
apps/frontend/src/components/: AgentRoster.tsx  AgentTracePanel.tsx  AutoPlayBanner.tsx  CfToggle.tsx  DeltaMetrics.tsx  InterventionCard.tsx  MatchTicker.tsx  MetricsCard.tsx  PlaybackControls.tsx  Twin3D.tsx  ZoneMesh.tsx
apps/frontend/src/lib/: autoplay.ts  cloud-run.ts  colors.ts  firebase-client.ts  firestore-admin.ts  geo.ts  types.ts  use-firestore.ts
apps/orchestrator/: .gcloudignore  Dockerfile  README.md  pyproject.toml
apps/orchestrator/src/: __init__.py  main.py
apps/orchestrator/src/agents/: care_agent.py  concierge_agent.py  experience_agent.py  flow_agent.py  orchestrator.py  queue_agent.py  revenue_agent.py  safety_agent.py
apps/orchestrator/src/prompts/: care.md  concierge.md  flow.md  orchestrator.md  queue.md  revenue.md
apps/orchestrator/src/state/: __init__.py  event_buffer.py  firestore_client.py  venue_snapshot.py
apps/orchestrator/src/subscribers/: __init__.py  sensor_events.py
apps/orchestrator/src/tests/: conftest.py  test_care_tools.py  test_cost_tracker.py  test_flow_tools.py  test_revenue_tools.py
apps/orchestrator/src/tools/: __init__.py  care_tools.py  concierge_tools.py  experience_tools.py  flow_tools.py  queue_tools.py  revenue_tools.py  safety_tools.py
apps/orchestrator/src/tools/shared/: __init__.py
apps/orchestrator/src/tracing/: __init__.py  cost_tracker.py
apps/simulator/: Dockerfile  README.md  pyproject.toml
apps/simulator/src/: __init__.py  main.py
apps/simulator/src/emitters/: __init__.py  cctv.py  pos.py  restroom.py  turnstile.py
apps/simulator/src/scenarios/: ipl_final.yaml
apps/simulator/src/tests/: test_emitters.py
docs/: accessibility.md  agent-specs.md  cost-analysis.md  demo-script.md  evaluation.md  hero.md  linkedin-post.md  privacy.md  security-scan.md  system-design.md  threat-model.md
infra/: firestore.rules
scripts/: _inject_docstrings.py  _inject_jsdoc.py  seed-firestore.ts
