[project]
name = "pulse-counterfactual"
version = "0.1.0"
description = "PULSE counterfactual simulator — lightweight density-only ABS that runs alongside reality with all agent actions suppressed. Writes parallel time-series to Firestore for the split-screen twin."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "google-cloud-firestore>=2.19.0",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
